Header on mobile - fixed height

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,9 @@
   @media screen and (max-width: 765px) {
     min-height: 300px;
   }
+  @media screen and (max-width: 576px) {
+    min-height: auto;
+  }
 
   .mobile {
     display: none;
